cmake_minimum_required(VERSION 3.31)
project(untitled1)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled1 problem6.cpp
        problem2.cpp
        problem1.cpp
        problem3.cpp
        problem4.cpp
        problem5.cpp
        problem7.cpp
        problem8.cpp
        problem9.cpp
        problem10.cpp
        problem11.cpp
        problem12.cpp)
